user-service/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: user-service
  labels:
    name: user-service
