user-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: user-service
spec:
  ports:
    - protocol: TCP
      name: web
      port: 8000
  selector:
    app: user-service
