user-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-service-ingress
  namespace: user-service
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: default

spec:
  rules:
    - host: "user-service.api.live.mindtastic.lol"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  user-service
                port:
                  number: 8000
